# xml-parser

./: CMakeLists.txt  README.md  ozi-xml.c  ozi-xml.h
src/: CMakeLists.txt  compiler-info.h
